tests/fail/record_literal_less_params.err
Semantic Error: Invalid fields count, 2 needed but 1 given at line 6.
